--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "repo_1",
+  "name": "alpha__rentmotors",
   "version": "1.0.0",
-  "description": "primer repositorio\r Archvo read me",
+  "description": "repositorio__rentadora__de__autos",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
